# job-agent

./: .env.development  .gitignore  README.md  demo.py  pyproject.toml
apps/backend/: .env.development  Makefile  demo.py  dev.docker-compose.yml  pyproject.toml  pytest.ini
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: a5ad7ad7b8f7_init.py  bd0006e98069_init.py
apps/backend/src/api/: auth.py  config.py  db.py  dependencies.py  main.py
apps/backend/src/api/routers/: __init__.py  auth_router.py  candidate_router.py  job_application_router.py  job_listing_router.py  me_router.py
apps/backend/src/job_agent/: models.py
apps/backend/src/job_agent/apply/: langchain.py
apps/backend/src/job_agent/scrape/: dependencies.py  job_scraper.py
apps/backend/src/job_agent/services/: candidate_service.py  dependencies.py  exceptions.py  job_application_service.py  job_listing_service.py  presigned_url_service.py  resume_service.py  s3_file_uploader.py  schemas.py
apps/backend/src/resume_generation/: generate.py  generated_resume.tex  latex.py  models.py  resume_template.tex.j2
apps/backend/tests/integration/: conftest.py  test_candidate_service.py  test_job_listing_service.py  test_job_scraper.py  test_presigned_url_service.py
apps/frontend/: openapi.json  orval.config.ts  package-lock.json  package.json
apps/frontend/src/: App.tsx  Layout.tsx  index.css  main.tsx  routes.tsx
apps/frontend/src/api/: custom-axios.ts  orval-api.ts
apps/frontend/src/api/auth/: auth.ts
apps/frontend/src/api/default/: default.ts
apps/frontend/src/api/job-applications/: job-applications.ts
apps/frontend/src/api/job-listings/: job-listings.ts
apps/frontend/src/api/me/: me.ts
apps/frontend/src/api/models/: addOrUpdateSocialRequest.ts  bodyLoginAuthTokenPost.ts  bodyLoginAuthTokenPostClientId.ts  bodyLoginAuthTokenPostClientSecret.ts  bodyUploadResume.ts  (+29 more)
apps/frontend/src/components/: footer-bar.tsx  nav-bar.tsx
apps/frontend/src/hooks/: use-user.tsx
apps/frontend/src/lib/: utils.ts
apps/frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx
apps/frontend/src/ui/: dashboard.tsx
infra/: README.md
migrations/: env.py
migrations/versions/: a5ad7ad7b8f7_init.py
scripts/: generate-frontend-client.sh
src/api/: auth.py  main.py
src/api/routers/: auth_router.py  candidate_router.py
src/job_agent/: db.py  models.py
src/job_agent/apply/: application_agent.py  langchain.py
src/job_agent/models/: __init__.py  applicant_profile.py  job_application.py  job_listing.py  resume.py
src/job_agent/scrape/: job_scraper.py
src/job_agent/services/: candidate_service.py  dependencies.py
tests/integration/: test_job_scraper.py
(+21 files in other folders)
