[project]
name = "job-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eli", email = "53414320+Eli-Chandler@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.6",
    "beautifulsoup4>=4.13.4",
    "browser-use>=0.5.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "lxml>=6.0.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.97.0",
    "playwright>=1.53.0",
    "pydantic>=2.5.3",
    "pypdf2>=3.0.1",
]

[project.scripts]
job-agent = "job_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
