[project]
name = "job-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eli", email = "53414320+Eli-Chandler@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=15.0.0",
    "aiohttp>=3.8.6",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "browser-use>=0.5.5",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "mypy>=1.11",
    "pydantic[email]>=2.5.3",
    "pypdf2>=3.0.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "docker>=7.1.0",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.5",
    "ruff-lsp>=0.0.62",
    "types-aiobotocore>=2.23.2",
    "types-aiobotocore-s3>=2.23.2",
    "types-docker>=7.1.0.20250705",
    "types-python-jose>=3.5.0.20250531",
]

